Fixed overflow

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 
 body
 {
+    overflow-y: hidden;
     margin: 0;
     display: flex;
     align-content: center;
